force-app/main/default/objects/Account/fields/Account_ACV__c.field-meta.xml
<CustomField>
    <fullName>Account_ACV__c</fullName>
    <label>Account ACV</label>
    <summarizedField>Opportunity.ACV__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business - Direct, New Business - Partner, Upsell/Cross Sell</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>