force-app/main/default/objects/Account/fields/account_fit__c.field-meta.xml
<CustomField>
    <fullName>account_fit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Company a Fit? This will be TRUE if the Company Score is 30 or higher.</description>
    <label>Company Fit?</label>
    <type>Checkbox</type>
</CustomField>