force-app/main/default/objects/Account/fields/Account_Journey__c.field-meta.xml
<CustomField>
    <fullName>Account_Journey__c</fullName>
    <label>Account Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
                <default>true</default>
                <label>Target</label>
            </value>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>