force-app/main/default/objects/Account/fields/Account_NRR__c.field-meta.xml
<CustomField>
    <fullName>Account_NRR__c</fullName>
    <description>This is the NRR number for the individual account.</description>
    <inlineHelpText>Manual to start. Need to create a formula based on opportunities.</inlineHelpText>
    <label>Account NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>