force-app/main/default/objects/Account/fields/Account_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Detail__c</fullName>
    <label>Account Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>