force-app/main/default/objects/Account/fields/Arcade_Date__c.field-meta.xml
<CustomField>
    <fullName>Arcade_Date__c</fullName>
    <label>Arcade Date</label>
    <type>Date</type>
</CustomField>