force-app/main/default/objects/Account/fields/Arcade_Page__c.field-meta.xml
<CustomField>
    <fullName>Arcade_Page__c</fullName>
    <label>Arcade Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>