force-app/main/default/objects/Account/fields/Arcade_Score__c.field-meta.xml
<CustomField>
    <fullName>Arcade_Score__c</fullName>
    <label>Arcade Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>