force-app/main/default/objects/Account/fields/Assoc_Avg_Score__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Avg_Score__c</fullName>
    <formula>round(if(Assoc_with_Score__c &gt; 3, Assoc_Total_Score__c / Assoc_with_Score__c ,0)/10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assoc Avg Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>