force-app/main/default/objects/Account/fields/Assoc_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Contacts__c</fullName>
    <label>Assoc Contacts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>