force-app/main/default/objects/Account/fields/Assoc_Leads__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Leads__c</fullName>
    <label>Assoc Leads</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>