force-app/main/default/objects/Account/fields/Assoc_Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Total_Records__c</fullName>
    <formula>Assoc_Contacts__c +  Assoc_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assoc Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>