force-app/main/default/objects/Account/fields/Assoc_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Total_Score__c</fullName>
    <label>Assoc Total Score</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>