force-app/main/default/objects/Account/fields/Assoc_with_Score__c.field-meta.xml
<CustomField>
    <fullName>Assoc_with_Score__c</fullName>
    <label>Assoc with Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>