force-app/main/default/objects/Account/fields/Attrib_First_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Attrib_First_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attrib First Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>