force-app/main/default/objects/Account/fields/Attrib_Last_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Attrib_Last_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attrib Last Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts (Attrib Last Campaign)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>