force-app/main/default/objects/Account/fields/CF_Account_Score__c.field-meta.xml
<CustomField>
    <fullName>CF_Account_Score__c</fullName>
    <label>CF Account Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>