force-app/main/default/objects/Account/fields/CF_CloseFactor_Tags__c.field-meta.xml
<CustomField>
    <fullName>CF_CloseFactor_Tags__c</fullName>
    <label>CF CloseFactor Tags</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>