force-app/main/default/objects/Account/fields/CF_Deep_Dive_Available__c.field-meta.xml
<CustomField>
    <fullName>CF_Deep_Dive_Available__c</fullName>
    <label>CF Deep Dive Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>