force-app/main/default/objects/Account/fields/CF_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>CF_Employee_Count__c</fullName>
    <label>CF Employee Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>