force-app/main/default/objects/Account/fields/Cloud_Providers__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Providers__c</fullName>
    <label>Cloud Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cloud_Providers</valueSetName>
    </valueSet>
</CustomField>