force-app/main/default/objects/Account/fields/Common_VC__c.field-meta.xml
<CustomField>
    <fullName>Common_VC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the VC that we have in common?</inlineHelpText>
    <label>Common VC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>