force-app/main/default/objects/Account/fields/Customer_lifetime_value_CLTV__c.field-meta.xml
<CustomField>
    <fullName>Customer_lifetime_value_CLTV__c</fullName>
    <description>Customer lifetime value (CLTV) - Rollup of all closed won deals</description>
    <label>Customer lifetime value (CLTV)</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Renewal, Upsell/Cross Sell, One Time, Paid Pilot, New Business - Direct, New Business - Partner, Renewal, Upsell/Cross Sell, Professional Services - One Time, Professional Services - Add-On, Paid Pilot</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>