force-app/main/default/objects/Account/fields/Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notes__c</fullName>
    <inlineHelpText>Enter any important information about the customer relevant to founders, sales, customer success, etc.</inlineHelpText>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>