force-app/main/default/objects/Account/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <description>Stores the customer reference number for tracking and identification purposes</description>
    <label>Customer Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>