force-app/main/default/objects/Account/fields/Email_Domain_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_1__c</fullName>
    <label>Email Domain 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>