force-app/main/default/objects/Account/fields/G2_Buyer_Intent_Details__c.field-meta.xml
<CustomField>
    <fullName>G2_Buyer_Intent_Details__c</fullName>
    <label>G2 Buyer Intent Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>