force-app/main/default/objects/Account/fields/Global_Territory__c.field-meta.xml
<CustomField>
    <fullName>Global_Territory__c</fullName>
    <label>Global Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Territories</valueSetName>
    </valueSet>
</CustomField>