force-app/main/default/objects/Account/fields/Installed_Technology__c.field-meta.xml
<CustomField>
    <fullName>Installed_Technology__c</fullName>
    <label>Installed Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Installed_Technology</valueSetName>
    </valueSet>
</CustomField>