force-app/main/default/objects/Account/fields/Intent_Based_Date__c.field-meta.xml
<CustomField>
    <fullName>Intent_Based_Date__c</fullName>
    <label>Intent Based Date</label>
    <type>Date</type>
</CustomField>