force-app/main/default/objects/Account/fields/Intent_G2_Events_120_Days__c.field-meta.xml
<CustomField>
    <fullName>Intent_G2_Events_120_Days__c</fullName>
    <label>Intent G2 Events 120 Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>