force-app/main/default/objects/Account/fields/Intent_Products__c.field-meta.xml
<CustomField>
    <fullName>Intent_Products__c</fullName>
    <label>Intent Products</label>
    <length>128</length>
    <type>Text</type>
</CustomField>