force-app/main/default/objects/Account/fields/Intent_Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Raw_Score__c</fullName>
    <label>Intent Raw Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>