force-app/main/default/objects/Account/fields/Intent_Score_2026__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_2026__c</fullName>
    <label>Intent Score 2026</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>