force-app/main/default/objects/Account/fields/Intent_Score_Adj__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Adj__c</fullName>
    <formula>if(or(isblank( Intent_Raw_Score__c ), Intent_Raw_Score__c == 0),
0,
max(1,min(10,round((0.5*Intent_Raw_Score__c)+0.1,0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Score Adj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>