force-app/main/default/objects/Account/fields/Lifetime_Lost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Lost_Opportunities__c</fullName>
    <label>Lifetime Lost Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>