force-app/main/default/objects/Account/fields/Lifetime_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Revenue_Amount__c</fullName>
    <label>Lifetime Revenue Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>