force-app/main/default/objects/Account/fields/Mkt_Azure_DevOps__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Azure_DevOps__c</fullName>
    <label>Mkt Azure DevOps</label>
    <length>20</length>
    <type>Text</type>
</CustomField>