force-app/main/default/objects/Account/fields/Mkt_Cursor__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Cursor__c</fullName>
    <description>Do they use Cursor?</description>
    <label>Mkt Cursor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>