force-app/main/default/objects/Account/fields/Mkt_DataBricks__c.field-meta.xml
<CustomField>
    <fullName>Mkt_DataBricks__c</fullName>
    <label>Mkt DataBricks</label>
    <length>20</length>
    <type>Text</type>
</CustomField>