force-app/main/default/objects/Account/fields/Mkt_GitHub_CoPilot__c.field-meta.xml
<CustomField>
    <fullName>Mkt_GitHub_CoPilot__c</fullName>
    <label>Mkt GitHub CoPilot</label>
    <length>20</length>
    <type>Text</type>
</CustomField>