force-app/main/default/objects/Account/fields/Mkt_Insights__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Insights__c</fullName>
    <label>Mkt Insights</label>
    <length>20</length>
    <type>Text</type>
</CustomField>