force-app/main/default/objects/Account/fields/Mkt_J2EE__c.field-meta.xml
<CustomField>
    <fullName>Mkt_J2EE__c</fullName>
    <description>Do they use Java 2 EE? J2EE</description>
    <label>Mkt J2EE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>