force-app/main/default/objects/Account/fields/Mkt_Microsoft__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Microsoft__c</fullName>
    <label>Mkt Microsoft</label>
    <length>20</length>
    <type>Text</type>
</CustomField>