force-app/main/default/objects/Account/fields/Mkt_NET__c.field-meta.xml
<CustomField>
    <fullName>Mkt_NET__c</fullName>
    <description>Company has MS .NET in their techstack.</description>
    <label>Mkt .NET</label>
    <length>20</length>
    <type>Text</type>
</CustomField>