force-app/main/default/objects/Account/fields/Mkt_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Salesforce__c</fullName>
    <inlineHelpText>Salesforce = they use Salesforce
Copado = they use Salesforce and Copado</inlineHelpText>
    <label>Mkt Salesforce</label>
    <length>20</length>
    <type>Text</type>
</CustomField>