force-app/main/default/objects/Account/fields/Mkt_SCM__c.field-meta.xml
<CustomField>
    <fullName>Mkt_SCM__c</fullName>
    <label>Mkt SCM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>