force-app/main/default/objects/Account/fields/MNDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have we signed an MNDA with this account?</inlineHelpText>
    <label>MNDA Signed</label>
    <type>Checkbox</type>
</CustomField>