force-app/main/default/objects/Account/fields/Number_of_Tools__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tools__c</fullName>
    <label>Number of Tools</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>