force-app/main/default/objects/Account/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR responsible for this account</description>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>