force-app/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this Company match our ICP and is it currently enrolled in an ABM Campaign?</description>
    <label>Target Account</label>
    <type>Checkbox</type>
</CustomField>