force-app/main/default/objects/Account/fields/Total_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Count__c</fullName>
    <label>Total Opp Count</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>