force-app/main/default/objects/Account/fields/warmlycreated__c.field-meta.xml
<CustomField>
    <fullName>warmlycreated__c</fullName>
    <description>Tracks whether Warmly created the record</description>
    <label>Warmly Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>True</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>