force-app/main/default/objects/Account/fields/warmlylastseenat__c.field-meta.xml
<CustomField>
    <fullName>warmlylastseenat__c</fullName>
    <description>Date this visitor was last seen on your website</description>
    <label>Warmly: Last seen</label>
    <type>DateTime</type>
</CustomField>