force-app/main/default/objects/Account/fields/warmlylink__c.field-meta.xml
<CustomField>
    <fullName>warmlylink__c</fullName>
    <description>Link of the matching contact page in Warmly</description>
    <label>Warmly: Link</label>
    <type>Url</type>
</CustomField>