force-app/main/default/objects/Account/fields/warmlymatchedsegments__c.field-meta.xml
<CustomField>
    <fullName>warmlymatchedsegments__c</fullName>
    <description>List of Warmly segments this record matches</description>
    <label>Warmly: Segments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>