force-app/main/default/objects/Account/fields/warmlytouched__c.field-meta.xml
<CustomField>
    <fullName>warmlytouched__c</fullName>
    <description>Contact has interacted with Chat or Orchestrator</description>
    <label>Warmly: Touched</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>True</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>