force-app/main/default/objects/Account/fields/warmlyutmcontents__c.field-meta.xml
<CustomField>
    <fullName>warmlyutmcontents__c</fullName>
    <description>List of UTM contents from sessions for this visitor</description>
    <label>Warmly: UTM Contents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>