force-app/main/default/objects/Account/fields/warmlyutmmediums__c.field-meta.xml
<CustomField>
    <fullName>warmlyutmmediums__c</fullName>
    <description>List of UTM mediums from sessions for this visitor</description>
    <label>Warmly: UTM Mediums</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>cpc</fullName>
            </value>
            <value>
                <fullName>newsletter</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>