force-app/main/default/objects/Account/fields/warmlyutmsources__c.field-meta.xml
<CustomField>
    <fullName>warmlyutmsources__c</fullName>
    <description>List of UTM sources from sessions for this visitor</description>
    <label>Warmly: UTM Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>ethical ads</fullName>
            </value>
            <value>
                <fullName>hs_email</fullName>
            </value>
            <value>
                <fullName>employee link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>