force-app/main/default/objects/Account/fields/warmlyvisitorcount__c.field-meta.xml
<CustomField>
    <fullName>warmlyvisitorcount__c</fullName>
    <description>Number of unique website visitors from this account</description>
    <label>Warmly: Visitor count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>