force-app/main/default/objects/Account/fields/Website_Domain__c.field-meta.xml
<CustomField>
    <fullName>Website_Domain__c</fullName>
    <formula>SUBSTITUTE(
  IF(
      FIND(&quot;/&quot;,
          IF(
              FIND(&quot;www.&quot;, Website) &gt; 0,
              IF(
                  FIND(&quot;//&quot;, Website) &gt; 0,
                  SUBSTITUTE(
                             Website,
                             LEFT(
                                  Website,
                                  FIND(&quot;//www.&quot;, Website) + 5),
                             NULL
                             ),
                  Website
               ),
               IF(
                   FIND(&quot;//&quot;, Website) &gt; 0,
                   SUBSTITUTE(
                       Website,
                       LEFT(
                           Website,
                           FIND(&quot;//&quot;, Website) + 1),
                       NULL),
                   Website
                   )
               )
           ) &gt; 0,
      LEFT(
          IF(
              FIND(&quot;www.&quot;,Website)&gt;0,
              IF(
                  FIND(&quot;//&quot;,Website)&gt;0,
                  SUBSTITUTE(
                      Website,
                      LEFT(
                          Website,
                          FIND(&quot;//www.&quot;,Website) + 5
                      ),
                     NULL),
                  Website
              ),
              IF(
                  FIND(&quot;//&quot;,Website)&gt;0,
                  SUBSTITUTE(
                      Website,
                      LEFT(
                          Website,
                          FIND(&quot;//&quot;,Website) + 1
                      ),
                      NULL
                  ),
                  Website
              )
          ),
          FIND(&quot;/&quot;,
              IF(
                  FIND(&quot;www.&quot;,Website)&gt;0,
                  IF(
                      FIND(&quot;//&quot;,Website)&gt;0,
                      SUBSTITUTE(
                          Website,
                          LEFT(
                              Website,
                              FIND(&quot;//www.&quot;, Website) + 5
                          ),
                          NULL
                     ),
                      Website),
                  IF(
                      FIND(&quot;//&quot;,Website) &gt; 0,
                      SUBSTITUTE(
                          Website,
                          LEFT(
                              Website,
                              FIND(&quot;//&quot;,Website) + 1
                          ),
                          NULL
                      ),
                      Website
                  )
              )
          ) -1
      ),
      IF(
          FIND(&quot;www.&quot;,Website)&gt;0,
          IF(
              FIND(&quot;//&quot;,Website)&gt;0,
              SUBSTITUTE(
                  Website,
                  LEFT(
                      Website,
                      FIND(&quot;//www.&quot;,Website)+5),
                  NULL
              ),
              Website
          ),
          IF(
              FIND(&quot;//&quot;,Website)&gt;0,
              SUBSTITUTE(
                  Website,
                  LEFT(
                      Website,
                      FIND(
                           &quot;//&quot;,
                           Website) + 1
                       ),
                      NULL
              ),
              Website)
      )
  ),
  &apos;www.&apos;,
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Domain</label>
    <type>Text</type>
</CustomField>