force-app/main/default/objects/Account/fields/X_Factor_Leads_Contacts__c.field-meta.xml
<CustomField>
    <fullName>X_Factor_Leads_Contacts__c</fullName>
    <label>X-Factor Leads + Contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>