force-app/main/default/objects/Account/fields/Znu_HQ_City__c.field-meta.xml
<CustomField>
    <fullName>Znu_HQ_City__c</fullName>
    <label>Znu HQ City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>