force-app/main/default/objects/Account/fields/Znu_HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>Znu_HQ_Country__c</fullName>
    <label>Znu HQ Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>