force-app/main/default/objects/Account/fields/Znu_Short_Industry__c.field-meta.xml
<CustomField>
    <fullName>Znu_Short_Industry__c</fullName>
    <label>Znu Short Industry</label>
    <length>128</length>
    <type>Text</type>
</CustomField>