force-app/main/default/objects/Account/fields/Znu_Website__c.field-meta.xml
<CustomField>
    <fullName>Znu_Website__c</fullName>
    <label>Znu_Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>