force-app/main/default/objects/Account/fields/ZZ_Status__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Status__c</fullName>
    <label>ZZ_Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>